[ne-NP] update from Pootle (firefox)

--- a/ne-NP/browser/chrome/browser/feeds/subscribe.properties
+++ b/ne-NP/browser/chrome/browser/feeds/subscribe.properties
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+linkTitleTextFormat=%Sमा जानुहोस्
+addHandlerAddButton=फिड पाठक थप्नुहोस्
 addHandlerAddButtonAccesskey=A
 liveBookmarks=लाइभ पुस्तिका चिनो
 subscribeNow=अहिले सदस्यता दिनुहोस्
