--- a/ne-NP/browser/chrome/browser/syncSetup.properties
+++ b/ne-NP/browser/chrome/browser/syncSetup.properties
@@ -10,12 +10,12 @@ invalidEmail.label          = अवैध इमेल ठेगाना
 serverInvalid.label         = कृपया वैध यु आर एल प्रविष्टि गर्नुहोस्
 usernameNotAvailable.label  = पहिलै प्रयोगमा रहेको
 
-verifying.label = रूजु गर्दै...
 
 # LOCALIZATION NOTE (additionalClientCount.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of additional clients (was %S for a short while, use #1 instead, even if both work)
+additionalClientCount.label = र #1 थप यन्त्र;र #1 थप यन्त्रहरु
 # LOCALIZATION NOTE (bookmarksCount.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -24,10 +24,12 @@ verifying.label = रूजु गर्दै...
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days (was %S for a short while, use #1 instead, even if both work)
+historyDaysCount.label      = #1 दिन इतिहासको;#1 दिनहरु इतिहासको
 # LOCALIZATION NOTE (passwordsCount.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of passwords (was %S for a short while, use #1 instead, even if both work)
+passwordsCount.label        = #1 पासवर्ड;#1 पासवर्डहरु
 # LOCALIZATION NOTE (addonsCount.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of add-ons, see the link above for forms
