--- a/ne-NP/browser/chrome/overrides/appstrings.properties
+++ b/ne-NP/browser/chrome/overrides/appstrings.properties
@@ -30,3 +30,4 @@ malwareBlocked=%S मा यो साइट आक्रामक साइट 
 phishingBlocked=The web site at %S has been reported as a web forgery designed to trick users into sharing personal or financial information.
 cspFrameAncestorBlocked=यस पृष्ठमा सामग्री सुरक्षा नीति छ जसले यो पृष्ठलाई यस तरिकाबाट सम्मिलित हुनबाट सुरक्षित गर्दछ ।
 corruptedContentError=डेटा प्रसारणमा एउटा त्रुटी पत्ता लागेको हुनाले तपाईंले हेर्न प्रयास गर्नु भएको पृष्ठ देखाउन सकिंदैन ।
+remoteXUL=यो पृष्ठले असमर्थित प्रविधि प्रयोग गर्ने भएकोले निर्धारित रुपमा यो पृष्ठ उपलब्ध छैन।
