--- a/ne-NP/dom/chrome/accessibility/AccessFu.properties
+++ b/ne-NP/dom/chrome/accessibility/AccessFu.properties
@@ -7,72 +7,12 @@ screenReaderStarted = दृष्ति वाचक शुरु भयो
 screenReaderStopped = दृष्ति वाचक बन्द भयो
 
 # Roles
-menubar        =       मेनु पट्टी
-scrollbar      =       स्क्रोल पट्टी
-grip           =       पकड
-alert          =       सतर्कता
-menupopup      =       मेनु पपअप
-document       =       कागजात
-pane           =       फलक
-dialog         =       संवाद
-separator      =       विभाजक
-toolbar        =       उपकरणपट्टी
-statusbar      =       वस्तुस्थिति पट्टी
 table          =       तालिका
-columnheader   =       स्तम्भ हेडर
-rowheader      =       पङ्क्ति हेडर
-column         =       स्तम्भ
-row            =       पङ्क्ति
-cell           =       कक्ष
 link           =       लिङ्क
-list           =       सूची
-listitem       =       सूची वस्तु
-outline        =       रूपरेखा
-outlineitem    =       वस्तुको बाह्यरेखा
-pagetab        =       ट्याब
-propertypage   =       स्वामित्व पृष्ठ
-graphic        =       ग्राफिक
 pushbutton     =       बटन
-checkbutton    =       ठीकचिन्ह बटन
-radiobutton    =       रेडियो बटन
-combobox       =       कम्बो बाकस
-progressbar    =       प्रगति पट्टी
-slider         =       स्लाइडर
-spinbutton     =       स्पिन बटन
-diagram        =       रेखाचित्र
-animation      =       एनिमेसन
-equation       =       समिकरण
-buttonmenu     =       बटन मेनु
-whitespace     =       सेतो खाली स्थान
-pagetablist    =       ट्याब सूची
-canvas         =       क्यानभास
-checkmenuitem  =       मेनु वस्तु जाँच्नुहोस्
-label          =       लेबल
 passwordtext   =       पासवर्ड पाठ
-radiomenuitem  =       रेडियो मेनु सूची
-textcontainer  =       पाठ भाँडो
-togglebutton   =       टगल बटन
-treetable      =       ट्रि तालिका
-header         =       हेडर
-footer         =       फूटर
-paragraph      =       अनुच्छेद
-entry          =       प्रविष्टि
-caption        =       क्याप्सन
-heading        =       शीर्षक
-section        =       खण्ड
-form           =       फारम
-comboboxlist   =       कम्बो बाकस सूची
-comboboxoption =       कम्बो बाकस विकल्प
 imagemap       =       छवि मानचित्र
-listboxoption  =       विकल्प
-listbox        =       सूची बाकस
-flatequation   =       च्याप्टो समिकरण
-gridcell       =       ग्रिडसेल
-note           =       द्रष्टव्य
 figure         =       स्वरूप
-definitionlist =       परिभाषा सूची
-term           =       शर्त
-definition     =       परिभाषा
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       पाठ क्षेत्र
@@ -94,11 +34,9 @@ listEnd        =       अन्तिम वस्तु
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       १ वस्तु;#१ वस्तुहरु
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %3$Sko %1$S %2$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       ब्यानर
@@ -108,17 +46,12 @@ main           =       मुख्य
 navigation     =       अन्वेषण
 search         =       खोजी
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S संग %S र %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 स्तम्भ;#1 स्तम्भहरू
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 पङ्क्ति;#1 पङ्क्तिहरु
 
 # table or grid cell information
 columnInfo = स्तम्भ %S
@@ -190,18 +123,21 @@ quicknav_Table       = तालिकाहरू
 quicknav_Checkbox    = ठीकचिन्ह लगाउने बाकस
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       lnk
 pushbuttonAbbr     =       btn
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       txtarea
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
