--- a/ne-NP/webapprt/webapprt/webapp.properties
+++ b/ne-NP/webapprt/webapprt/webapp.properties
@@ -37,6 +37,10 @@ webapps.install.title=स्थापित गर्नुहोस् %S
 webapps.install.description=के तपाईँ %S स्थापना गर्न चाहनुहुन्छ?
 webapps.install.install=एप स्थापना गर्नुहोस्
 webapps.install.dontinstall=स्थापित नगर्नुहोस्
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=भुक्तानी
 paymentDialog.message=तपाईँ कुन भुक्तानी प्रदायक प्रयोग गर्न चाहनु हुन्छ?
