--- a/ne-NP/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ne-NP/browser/chrome/browser/devtools/scratchpad.properties
@@ -89,3 +89,11 @@ fileNoLongerExists.notification=यो फाइल अब अवस्थित
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
