--- a/ne-NP/browser/chrome/browser/devtools/toolbox.properties
+++ b/ne-NP/browser/chrome/browser/devtools/toolbox.properties
@@ -40,6 +40,10 @@ toolboxToggleButton.tooltip=%1$S, %2$S\nविकासकर्ता उपक
 # for the options panel tab.
 optionsButton.tooltip=उपकरण बाकसका विकल्पहरू
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=विकल्पहरू
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 
@@ -61,3 +65,11 @@ browserConsoleCmd.commandkey=j
 
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=गाढा विषयवस्तु
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=मधुरो विषयवस्तु
