--- a/ne-NP/browser/chrome/browser/newTab.properties
+++ b/ne-NP/browser/chrome/browser/newTab.properties
@@ -5,5 +5,18 @@
 newtab.pin=यो साइटलाई तत्कालिन स्थानमा अड्काउनुहोस्
 newtab.unpin=यो साइटलाई छुटाउनुहोस्
 newtab.block=यो साईट हटाउनुहोस्
-newtab.show=नयाँ ट्याब पृष्ठ देखाउनुहोस्
-newtab.hide=नयाँ ट्याब पृष्ठलाई लुकाउनुहोस्
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
