--- a/ne-NP/browser/chrome/browser/shellservice.properties
+++ b/ne-NP/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S &Options
 safeModeLabel=%S &Safe Mode
-setDefaultBrowserTitle=पूर्वनिर्धारित ब्राउजर
-setDefaultBrowserMessage=%S लाई तपाइँको पूर्वनिर्धारित ब्राउजरको रुपमा सेट गरिएको छैन। के तपाइँ यसलाई पूर्वनिर्धारित ब्राउजर बनाउन चाहनुहुन्छ?
-setDefaultBrowserDontAsk=%S सुरु गर्दा सधैँ यो जाँच गर्नुहोस्।
-alreadyDefaultBrowser=%S पहिले नै तपाईँको डिफल्ट ब्राउजरको रुपमा बसिसकेको छ।
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = विकल्पहरू
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = मलाई फेरि नसोध्नुहोस्
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin=डेस्कटप पृष्ठभूमी.bmp
 DesktopBackgroundDownloading=तस्विर बचत गर्दै...
 DesktopBackgroundSet=डेस्कटप पृष्ठभूमि बसाउनुहोस्
