Translations for Firefox 33

--- a/rm/dom/chrome/plugins.properties
+++ b/rm/dom/chrome/plugins.properties
@@ -19,3 +19,6 @@ state_disabled=Deactivà
 mimetype_label=Tip MIME
 description_label=Descripziun
 suffixes_label=Finiziuns
+
+openH264_name=Il codec da video OpenH264 vegn purschì da Cisco Systems, Inc.
+openH264_description=Far ir videos da web ed utilisar chats da video.
