--- a/rm/security/manager/chrome/pippki/pippki.properties
+++ b/rm/security/manager/chrome/pippki/pippki.properties
@@ -7,7 +7,7 @@ CertPassPrompt=Endatescha per plaschair tes pled-clav da segirezza persunal per 
 
 #These are for dialogs
 #Download Cert dialog
-newCAMessage1=Duai vegnir fidà a "%S\ per las suandantas acziuns?
+newCAMessage1=Duai vegnir fidà a "%S" per las suandantas acziuns?
 unnamedCA=Post da certificaziun (senza num)
 
 #For editing cert trust
