--- a/rm/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/rm/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -56,6 +56,8 @@ notification.downloadError.retry.tooltip=Empruvar anc ina giada da telechargiar 
 notification.installError=Ina errur è cumparida cun installar %1$S.
 notification.installError.retry=Empruvar danovamain
 notification.installError.retry.tooltip=Empruvar anc ina giada da telechargiar ed installar quest supplement
+#LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
+notification.openH264Pending=Vegn installà en curt mument.
 
 #LOCALIZATION NOTE (contributionAmount2) %S is the currency amount recommended for contributions
 contributionAmount2=Contribuziun proponida: %S
@@ -97,7 +99,9 @@ details.notification.install=%1$S vegn installà suenter avair reavià %2$S.
 details.notification.uninstall=%1$S vegn deinstallà suenter avair reavià %2$S.
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
 details.notification.upgrade=%1$S vegn actualisà suenter avair reavià %2$S.
-
+#LOCALIZATION NOTE (details.notification.openH264Pending) OpenH264 will be automatically installed later.
+details.notification.openH264Pending=Vegn installà en curt mument.
+	
 # LOCALIZATION NOTE (details.experiment.time.daysRemaining):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
