--- a/rm/toolkit/chrome/global/findbar.properties
+++ b/rm/toolkit/chrome/global/findbar.properties
@@ -10,6 +10,12 @@ NormalFind=Tschertgar en la pagina
 FastFind=Tschertgar immediat
 FastFindLinks=Tschertgar immediat (be colliaziuns)
 CaseSensitive=(Maiusclas/minusclas)
-FoundMatchCount=%S congruenza
-FoundMatchesCount=%S congruenzas
-FoundTooManyMatches=Dapli che %S congruenzas
+# LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is currently selected match and #2 the total amount of matches.
+FoundMatches=#1 dad #2 congruenza;#1 da #2 congruenzas
+# LOCALIZATION NOTE (FoundMatchesCountLimit): Semicolon-separated list of plural
+# forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 is the total amount of matches allowed before counting stops.
+FoundMatchesCountLimit=Dapli che #1 congruenza;Dapli che #1 congruenzas
