Update browser: Panic button and uplift other changes from aurora

--- a/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,3 +97,6 @@ quit-button.tooltiptext.linux2 = 離開 %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = 離開 %1$S (%2$S)
 
+panic-button.label = 忘記
+panic-button.tooltiptext = 忘掉一些瀏覽紀錄
+
