--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -293,7 +293,7 @@ offlineApps.manageUsageAccessKey=S
 indexedDB.usage=此網站（%1$S）正嘗試在您的電腦上儲存超過 %2$SMB 的資料以供離線使用。
 
 identity.identified.verifier=驗證機構: %S
-identity.identified.verified_by_you=您已將此網站加入例外清單
+identity.identified.verified_by_you=您已將此網站加入例外清單。
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=與此網站的連線是安全的。
