[sl] update from Pootle (lightning)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -42,8 +42,8 @@ BeforeClosing=pred zapiranjem
 BeforePreview=pred ogledom strani v brskalniku
 BeforeValidate=pred preverjanjem dokumenta
 # LOCALIZATION NOTE (SaveFilePrompt, PublishPrompt): Don't translate %title% and %reason% (this is the reason for asking user to close, such as "before closing")
-SaveFilePrompt=Naj se spremembe shrani v "%title%" %reason%?  
-PublishPrompt=Naj se spremembe shrani v "%title%" %reason%?  
+SaveFilePrompt=Naj se spremembe shrani v "%title%" %reason%? \u0020
+PublishPrompt=Naj se spremembe shrani v "%title%" %reason%? \u0020
 SaveFileFailed=Datoteke ni uspelo shraniti!
 
 # Publishing error strings:
@@ -119,7 +119,7 @@ untitledTitle=brez-naslova-%S
 untitledDefaultFilename=brez naslova
 ShowToolbar=Pokaži orodno vrstico
 HideToolbar=Skrij orodno vrstico
-ImapError=Slike ni mogoče naložiti  
+ImapError=Slike ni moč naložiti \u0020
 ImapCheck=\nIzberite novo lokacijo (URI) in poskusite znova.
 SaveToUseRelativeUrl=Relativne URI-je se lahko uporablja samo straneh, ki so že shranjene
 NoNamedAnchorsOrHeadings=(Na tej strani ni ne poimenovanih sider ne naslovov)
