Translation & corrections of files modified in Aurora

--- a/uk/mobile/android/chrome/pippki.properties
+++ b/uk/mobile/android/chrome/pippki.properties
@@ -29,13 +29,13 @@ certmgr.title=Подробиці сертифіката
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
 certmgr.subjectinfo.label=Кому видано
 certmgr.issuerinfo.label=Ким видано
-certmgr.periodofvalidity.label=Period of Validity
+certmgr.periodofvalidity.label=Термін дії
 certmgr.fingerprints.label=Відбитки
 certmgr.certdetail.cn=Загальне ім’я (CN)
 certmgr.certdetail.o=Організація (O)
 certmgr.certdetail.ou=Організаційний підрозділ (OU)
 certmgr.certdetail.serialnumber=Серійний номер
-certmgr.certdetail.sha256fingerprint=SHA-256 Fingerprint
+certmgr.certdetail.sha256fingerprint=Відбиток SHA-256
 certmgr.certdetail.sha1fingerprint=Відбиток SHA1
-certmgr.begins=Begins On
+certmgr.begins=Починається
 certmgr.expires=Дійсний до
