--- a/fy-NL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fy-NL/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Skrasblokpaniel
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Skrasblok
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Scamwarskôging: wês foarsichtich mei it plakken fan saken dy't jo net begripe. Hjirtroch kinne oanfallers jo identiteit stelle of de bestjoering fan jo kompjûter oernimme. Typ ‘%S’ yn it ûndersteande skrasblok om plakken ta te stean.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=plakke tastean
