--- a/fy-NL/browser/chrome/browser/devtools/toolbox.properties
+++ b/fy-NL/browser/chrome/browser/devtools/toolbox.properties
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 toolboxDockButtons.bottom.tooltip=Fêstsette op ûnderkant fan browserfinster
 toolboxDockButtons.side.tooltip=Fêstsette oan de sydkant fan browserfinster
 toolboxDockButtons.window.tooltip=Yn apart finster toane
@@ -37,7 +41,11 @@ toolbox.label=Untwikkelersark
 
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the optiosn panel tab.
-optionsButton.tooltip=Toolbox-opsjes
+optionsButton.tooltip=Wurksetopsjes
+
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Opsjes
 
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
@@ -62,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Selektearje in elemint op de side
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tsjuster tema
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Ljocht tema
