--- a/fy-NL/browser/chrome/browser/devtools/webconsole.properties
+++ b/fy-NL/browser/chrome/browser/devtools/webconsole.properties
@@ -241,3 +241,19 @@ selfxss.okstring=plakke tastean
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Toan/ferstop berjochtdetails.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 leech slot;#1 lege slotten
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(yndeks)
+table.iterationIndex=(iteraasje-yndeks)
+table.key=Kaai
+table.value=Wearden
