browser update 4 for aurora 34

--- a/fy-NL/browser/chrome/browser/browser.properties
+++ b/fy-NL/browser/chrome/browser/browser.properties
@@ -540,6 +540,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 finster);#1 (#2 finsters)
 getUserMedia.shareSelectedDevices.label = Selektearre apparaat diele;Selektearre apparaten diele
 getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = Skerm diele
+getUserMedia.shareApplication.label = Selektearre applikaasje diele
 getUserMedia.shareWindow.label = Selektearre finster diele
 getUserMedia.shareSelectedItems.label = Selektearre items diele
 getUserMedia.always.label = Altyd diele
