[he] browser/devtools/toolbox

--- a/he/browser/chrome/browser/devtools/toolbox.properties
+++ b/he/browser/chrome/browser/devtools/toolbox.properties
@@ -44,3 +44,25 @@ optionsButton.tooltip=אפשרויות ארגז כלים
 # tool which is not supported for the current toolbox target.
 # The name of the tool: %1$S.
 options.toolNotSupportedMarker=%1$S *
+
+# LOCALIZATION NOTE (scratchpad.keycode)
+# Used for opening scratchpad from the detached toolbox window
+# Needs to match scratchpad.keycode from browser.dtd
+scratchpad.keycode=VK_F4
+
+# LOCALIZATION NOTE (browserConsoleCmd.commandkey)
+# Used for toggling the browser console from the detached toolbox window
+# Needs to match browserConsoleCmd.commandkey from browser.dtd
+browserConsoleCmd.commandkey=j
+
+# LOCALIZATION NOTE (pickButton.tooltip)
+# This is the tooltip of the pick button in the toolbox toolbar
+pickButton.tooltip=בחירת אלמנט מהדף
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=מראה כהה
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=מראה בהיר
