--- a/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Kilépés a %1$Sból  (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Kilépés a %1$Sból  (%2$S)
+
+panic-button.label = Elfelejtés
+panic-button.tooltiptext = Böngészési előzmények elfelejtése
