[he] toolkit/chrome/mozapps/extensions/extensions.properties

--- a/he/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/he/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -176,3 +176,4 @@ type.locale.name=שפות
 type.plugin.name=תוספים חיצוניים
 type.dictionary.name=מילונים
 type.service.name=שירותים
+type.experiment.name=ניסוים
