updated latvian translation

--- a/lv/mobile/android/chrome/browser.properties
+++ b/lv/mobile/android/chrome/browser.properties
@@ -7,8 +7,9 @@ addonsConfirmInstall.install=Instalēt
 
 # Alerts
 alertAddonsDownloading=Lejupielādē papildinājumu
-alertAddonsInstalledNoRestart=Instalēšana pabeigta
+alertAddonsInstalledNoRestart.message=Instalēšana pabeigta
 alertAddonsFail=Instalēšana neizdevās
+alertAddonsInstalledNoRestart.action2=PAPILDINĀJUMI
 
 alertDownloadsStart2=Uzsāk lejupielādi
 alertDownloadsDone2=Lejupielāde pabeigta
@@ -159,7 +160,9 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Teksts iekopēts atmiņā
 
 # Casting
-casting.prompt=Raidīt uz ierīci
+casting.sendToDevice=Sūtīt uz ierīci
+casting.mirrorTab=Dublēt cilni
+casting.mirrorTabStop=Pārtraukt dublēšanu
 tabshare.title = "Izvēlieties straumējamo cilni"
 
 # Context menu
@@ -194,7 +197,39 @@ contextmenu.unmute=Ieslēgt skaņu
 contextmenu.saveVideo=Saglabāt video
 contextmenu.saveAudio=Saglabāt audio
 contextmenu.addToContacts=Pievienot kontaktiem
-contextmenu.castToScreen=Raidīt uz ekrānu
+contextmenu.sendToDevice=Sūtīt uz ierīci
+
+# Device Storage API
+deviceStorageMusic.allow=Atļaut
+deviceStorageMusic.dontAllow=Neatļaut
+deviceStorageMusic.ask=Atļaut %S piekļuvi jūsu mūzikai?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Vairāk nejautāt šajā lapā
+
+deviceStoragePictures.allow=Atļaut
+deviceStoragePictures.dontAllow=Neatļaut
+deviceStoragePictures.ask=Atļaut %S piekļuvi jūšu attēliem?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Vairāk nejautāt šajā lapā
+
+deviceStorageSdcard.allow=Atļaut
+deviceStorageSdcard.dontAllow=Neatļaut
+deviceStorageSdcard.ask=Atļaut %S piekļuvi jūsu krātuvei?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Vairāk nejautāt šajā lapā
+
+deviceStorageVideos.allow=Atļaut
+deviceStorageVideos.dontAllow=Neatļaut
+deviceStorageVideos.ask=Atļaut %S piekļuvi jūsu video?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Vairāk nejautāt šajā lapā
+
+downloads.disabledInGuest=Lejupielādes nav atļautas viesa sesijas laikā
+nativeWindow.deprecated=%S ir novecojis. Lūdzu izmantojiet %S
 
 contextmenu.copy=Kopēt
 contextmenu.cut=Izgriezt
