--- a/lv/mobile/android/chrome/webapp.properties
+++ b/lv/mobile/android/chrome/webapp.properties
@@ -51,3 +51,5 @@ retrievalFailedTitle=#1 lejupielāžu neizdevās;#1 lejupielāde neizdevās;#1 l
 # %S is a comma-separated list of apps for which a download failed.
 # example: Failed to download Foo, Bar, Baz.
 retrievalFailedMessage=Neizdevās lejupielādēt %1$S;Neizdevās lejupielādēt %1$S;Neizdevās lejupielādēt %1$S
+
+webappsDisabledInGuest=Instalēšana nav atļauta viesa sesijas laikā
