--- a/lv/toolkit/chrome/global/aboutSupport.properties
+++ b/lv/toolkit/chrome/global/aboutSupport.properties
@@ -31,6 +31,7 @@ clearTypeParametersNotFound = ClearType parametri nav atrasti
 adapterDescription = Ierīces apraksts
 adapterVendorID = Ražotāja ID
 adapterDeviceID = Ierīces ID
+adapterSubsysID = Subsys ID
 adapterDrivers = Ierīces draiveris
 adapterRAM = Ierīces RAM
 driverVersion = Draivera versija
@@ -40,6 +41,7 @@ webglRenderer = WebGL renderētājs
 adapterDescription2 = Ierīces apraksts (GPU #2) 
 adapterVendorID2 = Ražotāja ID (GPU #2) 
 adapterDeviceID2 = Ierīces ID (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Ierīces draiveris (GPU #2)
 adapterRAM2 = Ierīces RAM (GPU #2)
 driverVersion2 = Draivera versija (GPU #2)
