--- a/fy-NL/browser/chrome/browser/devtools/profiler.properties
+++ b/fy-NL/browser/chrome/browser/devtools/profiler.properties
@@ -21,7 +21,7 @@ profiler.panelLabel2=Prestaasjespaniel
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
-profiler2.commandkey=VK_F5
+profiler.commandkey2=VK_F5
 profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
