[S] security: Bug 1073865 - Add missing SSL_ERROR l10n strings v1

--- a/it/security/manager/chrome/pipnss/nsserrors.properties
+++ b/it/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID = SSL ha ricevuto dati non validi relativi 
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2 = Caratteristica SSL non supportata per connessioni SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS = Caratteristica SSL non supportata per server.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS = Caratteristica SSL non supportata per client.
+SSL_ERROR_INVALID_VERSION_RANGE = L’intervallo di versione SSL non è valido.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION = Il peer SSL ha selezionato una suite di cifratura non consentita per la versione selezionata del protocollo.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST = SSL ha ricevuto un messaggio handshake di tipo Hello Verify Request in formato non corretto.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST = SSL ha ricevuto un messaggio handshake di tipo Hello Verify Request non atteso.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION = Caratteristica SSL non supportata dalla versione del protocollo.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS = SSL ha ricevuto un messaggio handshake di tipo Certificate Status non atteso.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM = Algoritmo di hash utilizzato dal peer TLS non supportato.
+SSL_ERROR_DIGEST_FAILURE = Funzione “digest” non riuscita.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM = Algoritmo di firma non corretto specificato in un elemento firmato digitalmente.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK = L’estensione “next protocol negotiation” è stata attivata, ma il callback è stato rimosso prima del necessario.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL = Il server non supporta alcun protocollo dichiarato dal client nell’estensione ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT = Il server ha rifiutato l’handshake in quanto il client ha effettuato il downgrade a una versione di TLS inferiore a quella supportata dal server.
 SEC_ERROR_IO = Si è verificato un errore di I/O durante l’autorizzazione di sicurezza.
 SEC_ERROR_LIBRARY_FAILURE = rrrore nella libreria di sicurezza.
 SEC_ERROR_BAD_DATA = libreria di sicurezza: ricevuti dati scorretti.
