--- a/it/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/it/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -53,3 +53,5 @@ loop-call-button.label = Chiama
 loop-call-button.tooltiptext = Invita altre persone per parlare
 panic-button.label = Dimentica
 panic-button.tooltiptext = Elimina alcune informazioni dalla cronologia di navigazione
+web-apps-button.label = App
+web-apps-button.tooltiptext = Scopri nuove app
