downloads.properties corrections

--- a/uk/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/uk/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -63,7 +63,7 @@ statusFormatInfiniteRate=%3$S — %1$S (%2$S)
 # example: 4 minutes left — 1.1 of 11.1 GB
 statusFormatNoRate=%2$S — %1$S
 
-bytes=байтів
+bytes=байт
 kilobyte=Кб
 megabyte=Мб
 gigabyte=Гб
@@ -86,11 +86,11 @@ transferNoTotal2=%1$S %2$S
 timePair2=%1$S %2$S
 # LOCALIZATION NOTE (timeLeftSingle2): %1$S time left
 # example: 1 minute remaining; 11 hours remaining
-timeLeftSingle2=лишилось %1$S
+timeLeftSingle2=Залишилось %1$S
 # LOCALIZATION NOTE (timeLeftDouble2): %1$S time left; %2$S time left sub units
 # example: 11 hours, 2 minutes remaining; 1 day, 22 hours remaining
-timeLeftDouble2=лишилось %1$S, %2$S
-timeFewSeconds=Лишилось кілька секунд
+timeLeftDouble2=Залишилось %1$S, %2$S
+timeFewSeconds=Залишилось кілька секунд
 timeUnknown=Потрібний час невідомий
 
 # LOCALIZATION NOTE (doneStatus): — is the "em dash" (long dash)
