Bug 1034114 - Defer remote debugger initialization via notification

--- a/sk/mobile/android/chrome/browser.properties
+++ b/sk/mobile/android/chrome/browser.properties
@@ -321,6 +321,10 @@ remoteNotificationGenericName=Aplikácia
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Počúva sa na porte %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktivovať ladenie pre %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Ťuknutím aktivujete vzdialené ladenie
 
 # Helper apps
 helperapps.open=Otvoriť
