Bug 1072894 - Implement polygon() parsing for clip-path

--- a/sk/dom/chrome/layout/css.properties
+++ b/sk/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Očakávaný identifikátor pre extends system, ale bol
 PECounterASWeight=Každá hodnota v popisovači pre additive-symbols musí byť mešia ako predchádzajúca hodnota.
 PEClassSelEOF=názov triedy
 PEClassSelNotIdent=Očakávaný identifikátor selektoru triedy, ale bolo nájdené '%1$S'.
+PECoordinatePair=Očakáva sa pár koordinátov, ale bolo nájdené '%1$S'.
 PETypeSelEOF=typ prvku
 PETypeSelNotType=Očakávaný názov prvku alebo '*', ale bolo nájdené '%1$S'.
 PEUnknownNamespacePrefix=Neznáma predpona priestoru názvov '%1$S'.
@@ -106,6 +107,7 @@ PEColorLightnessEOF=intenzita
 PEColorOpacityEOF=priehľadnosť hodnoty farby
 PEExpectedNumber=Očakávané číslo, ale bolo nájdené '%1$S'.
 PEExpectedCloseParen=Očakávaný znak ')', ale bolo nájdené '%1$S'.
+PEClipPathEOF=<basic-shape> alebo referenčný box
 PEDeclEndEOF=';' alebo '}'  pre ukončenie deklarácie
 PEParseDeclarationNoColon=Očakávaný znak ':', ale bolo nájdené '%1$S'.
 PEParseDeclarationDeclExpected=Očakávaná deklarácia, ale bolo nájdené '%1$S'.
