Bug 787133 - (hpkp) Part 1/2. Header Parsing and interface within PSM

--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -8,6 +8,8 @@ CrossSiteRequestBlocked=Žiadosť Cross-Origin zablokovaná: zásada rovnakého 
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Stránka má definovanú neplatnú hlavičku Strict-Transport-Security.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Stránka má definovanú neplatnú hlavičku Public-Key-Pins.
 InsecurePasswordsPresentOnPage=Polia s heslami sú umiestnené na nezabezpečenej (http://) stránke. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecureFormActionPasswordsPresent=Polia s heslami sú umiestnené vo formulári, ktorý má definovanú nezabezpečenú (http://) akciu formulára. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
 InsecurePasswordsPresentOnIframe=Polia s heslami sú umiestnené na nezabezpečenom (http://) rámci iframe. Toto je bezpečnostné riziko, pretože to umožňuje ukradnúť prihlasovacie údaje používateľa.
