--- a/ja-JP-mac/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ja-JP-mac/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2		= %1$S を終了します (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac		= %1$S を終了します (%2$S)
+
+panic-button.label			= 忘却
+panic-button.tooltiptext		= 直前のブラウズ履歴を消去します
